--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,13 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.25"
+evm_version = "cancun"
+via_ir = true
+optimizer_runs = 1000000
+fs_permissions = [{ access = "read", path = "./" }]
+
+[etherscan]
+mainnet = { key = "${ETHERSCAN_API_KEY_ETHEREUM}", url = "${ETHERSCAN_URL_ETHEREUM}" }
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
